# spark-overview

./: .env  README.md  docker-compose.yml  pyproject.toml
dataset/parquet_data/: product_category_name_translation.parquet
spark/: dockerfile-driver  dockerfile-executor
spark2/: docker-compose.yml
storage/: Dockerfile  csv_to_parquet.py
storage/parquet_data/: olist_order_payments_dataset.parquet  olist_products_dataset.parquet  olist_sellers_dataset.parquet
