[tool.poetry]
name = "spark-overview"
version = "0.1.0"
description = "The Spark Code Overview Project"
authors = ["Gabriel Bossardi <contato@gabrielbossardi.com.br>"]
license = "MIT"
readme = "README.md"
packages = [{include = "spark_overview"}]

[tool.poetry.dependencies]
python = "^3.11"
notebook = "^6.5.4"
pyspark = "^3.4.0"
findspark = "^2.0.1"


[tool.poetry.group.dev.dependencies]
pandas = "^2.0.2"
pyarrow = "^12.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
